// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loads more comments 1`] = `
<div
  className="Flex-root App-root"
>
  <div
    className="Flex-flex Flex-wrap Flex-justifyCenter Flex-alignCenter"
  >
    <div
      className="Flex-root Stream-root"
    >
      <div
        className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
      >
        <div
          className="Flex-root"
        >
          <div
            className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignCenter"
          >
            <button
              className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Sign in
            </button>
            <button
              className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantOutlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Register
            </button>
          </div>
        </div>
        <form
          autoComplete="off"
          className="PostCommentForm-root"
          onSubmit={[Function]}
        >
          <div>
            <textarea
              className="PostCommentForm-textarea"
              name="body"
              onChange={[Function]}
              placeholder="Post a comment"
              value=""
            />
          </div>
          <button
            className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth Button-disabled"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in and join the conversation
          </button>
        </form>
        <div
          aria-live="polite"
          className="Flex-root"
          id="talk-comments-stream-log"
          role="log"
        >
          <div
            className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
          >
            <div
              className="Flex-root"
            >
              <div
                className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
              >
                <div
                  className="Comment-root"
                  role="article"
                >
                  <div
                    className="Flex-root TopBar-root"
                  >
                    <div
                      className="Flex-flex Flex-halfItemGutter Flex-wrap Flex-alignBaseline Flex-directionColumn"
                    >
                      <span
                        className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                      >
                        Markus
                      </span>
                      <time
                        className="Timestamp-root RelativeTime-root"
                        dateTime="2018-07-06T18:24:00.000Z"
                        title="2018-07-06T18:24:00.000Z"
                      >
                        2018-07-06T18:24:00.000Z
                      </time>
                    </div>
                  </div>
                  <p
                    className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                  >
                    Joining Too
                  </p>
                  <div
                    className="Comment-footer"
                  />
                </div>
              </div>
            </div>
            <div
              className="Flex-root"
            >
              <div
                className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
              >
                <div
                  className="Comment-root"
                  role="article"
                >
                  <div
                    className="Flex-root TopBar-root"
                  >
                    <div
                      className="Flex-flex Flex-halfItemGutter Flex-wrap Flex-alignBaseline Flex-directionColumn"
                    >
                      <span
                        className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                      >
                        Lukas
                      </span>
                      <time
                        className="Timestamp-root RelativeTime-root"
                        dateTime="2018-07-06T18:20:00.000Z"
                        title="2018-07-06T18:20:00.000Z"
                      >
                        2018-07-06T18:20:00.000Z
                      </time>
                    </div>
                  </div>
                  <p
                    className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                  >
                    What's up?
                  </p>
                  <div
                    className="Comment-footer"
                  />
                </div>
              </div>
            </div>
            <div
              className="Flex-root"
            >
              <div
                className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
              >
                <div
                  className="Comment-root"
                  role="article"
                >
                  <div
                    className="Flex-root TopBar-root"
                  >
                    <div
                      className="Flex-flex Flex-halfItemGutter Flex-wrap Flex-alignBaseline Flex-directionColumn"
                    >
                      <span
                        className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                      >
                        Isabelle
                      </span>
                      <time
                        className="Timestamp-root RelativeTime-root"
                        dateTime="2018-07-06T18:14:00.000Z"
                        title="2018-07-06T18:14:00.000Z"
                      >
                        2018-07-06T18:14:00.000Z
                      </time>
                    </div>
                  </div>
                  <p
                    className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                  >
                    Hey!
                  </p>
                  <div
                    className="Comment-footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders comment stream 1`] = `
<div
  className="Flex-root App-root"
>
  <div
    className="Flex-flex Flex-wrap Flex-justifyCenter Flex-alignCenter"
  >
    <div
      className="Flex-root Stream-root"
    >
      <div
        className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
      >
        <div
          className="Flex-root"
        >
          <div
            className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignCenter"
          >
            <button
              className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Sign in
            </button>
            <button
              className="BaseButton-root Button-root Button-sizeSmall Button-colorPrimary Button-variantOutlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Register
            </button>
          </div>
        </div>
        <form
          autoComplete="off"
          className="PostCommentForm-root"
          onSubmit={[Function]}
        >
          <div>
            <textarea
              className="PostCommentForm-textarea"
              name="body"
              onChange={[Function]}
              placeholder="Post a comment"
              value=""
            />
          </div>
          <button
            className="BaseButton-root Button-root Button-sizeLarge Button-colorPrimary Button-variantFilled Button-fullWidth Button-disabled"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in and join the conversation
          </button>
        </form>
        <div
          aria-live="polite"
          className="Flex-root"
          id="talk-comments-stream-log"
          role="log"
        >
          <div
            className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
          >
            <div
              className="Flex-root"
            >
              <div
                className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
              >
                <div
                  className="Comment-root"
                  role="article"
                >
                  <div
                    className="Flex-root TopBar-root"
                  >
                    <div
                      className="Flex-flex Flex-halfItemGutter Flex-wrap Flex-alignBaseline Flex-directionColumn"
                    >
                      <span
                        className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                      >
                        Markus
                      </span>
                      <time
                        className="Timestamp-root RelativeTime-root"
                        dateTime="2018-07-06T18:24:00.000Z"
                        title="2018-07-06T18:24:00.000Z"
                      >
                        2018-07-06T18:24:00.000Z
                      </time>
                    </div>
                  </div>
                  <p
                    className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                  >
                    Joining Too
                  </p>
                  <div
                    className="Comment-footer"
                  />
                </div>
              </div>
            </div>
            <div
              className="Flex-root"
            >
              <div
                className="Flex-flex Flex-itemGutter Flex-wrap Flex-alignFlexStart Flex-directionColumn"
              >
                <div
                  className="Comment-root"
                  role="article"
                >
                  <div
                    className="Flex-root TopBar-root"
                  >
                    <div
                      className="Flex-flex Flex-halfItemGutter Flex-wrap Flex-alignBaseline Flex-directionColumn"
                    >
                      <span
                        className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                      >
                        Lukas
                      </span>
                      <time
                        className="Timestamp-root RelativeTime-root"
                        dateTime="2018-07-06T18:20:00.000Z"
                        title="2018-07-06T18:20:00.000Z"
                      >
                        2018-07-06T18:20:00.000Z
                      </time>
                    </div>
                  </div>
                  <p
                    className="Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                  >
                    What's up?
                  </p>
                  <div
                    className="Comment-footer"
                  />
                </div>
              </div>
            </div>
            <button
              aria-controls="talk-comments-stream-log"
              className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined Button-fullWidth"
              disabled={false}
              id="talk-comments-stream-loadMore"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Load More
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
